--- a/assets/pug/data/recent-chat-app.pug
+++ b/assets/pug/data/recent-chat-app.pug
@@ -92,7 +92,7 @@
             image:'6.jpg',
             title :'Janis Evans',
             subtitle:'Hi i am janis. how are you?',
-            status:'offline',
+            status:'online',
             time:'Thus',
             calltime:'5:50',
             calltype:'missed...',
