--- a/assets/pug/pages/template/error.pug
+++ b/assets/pug/pages/template/error.pug
@@ -5,16 +5,13 @@
 //- custom select
 -var customSelect= true;
 
-//- customizer  
--var customizer=true;
-
 doctype html
 html(lang='en')
     include ../../layout/header-files
     body(dir="ltr" class="unique-skin")
         main.page-wrapper
             // Page Body Start
-            div.page-body(class="h-[100vh]")
+            div.page-body(class="h-[100vh] !mt-0")
                 div.flex.items-center.flex-col.justify-center.text-center.common-animate-main
                     div(class="w-full relative max-w-[35%] 4xl:max-w-[40%] xl:max-w-[48%] lg:max-w-[55%] md:max-w-[68%] sm:max-w-[75%] 2sm:max-w-[80%]")
                         img(src="../../assets/images/svg/404.svg" class="w-full" alt="404")
