--- a/assets/pug/pages/template/input-textarea.pug
+++ b/assets/pug/pages/template/input-textarea.pug
@@ -54,10 +54,10 @@ html(lang='en')
                         div.flex.flex-col.gap-3.form-group
                           div.flex.flex-col.gap-1
                             label(for="email").font-medium.text-xs.text-primary Email
-                            input(type="email" placeholder="Enter your email id.." class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
+                            input(type="email" placeholder="Enter your email id" class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
                           div.flex.flex-col.gap-1
                             label(for="password").font-medium.text-xs.text-primary Password
-                            input(type="password" placeholder="Password.." class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
+                            input(type="password" placeholder="Password" class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
                           div.flex.flex-wrap.gap-1
                             button.btn.btn-primary.text-white Submit
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
@@ -69,11 +69,11 @@ html(lang='en')
                           |   &lt;div class="flex flex-col gap-3 form-group"&gt;
                           |       &lt;div class="flex flex-col gap-1"&gt; 
                           |           &lt;label for="email" class="text-xs font-medium text-primary"&gt;Email&lt;/label&gt;
-                          |           &lt;input type="email"  placeholder="Enter your email id.." class="p-[11px] dark:border-border-dark dark:bg-sidebar-dark2 w-full border border-border-light rounded-5 text-xs text-content"/&gt;
+                          |           &lt;input type="email"  placeholder="Enter your email id" class="p-[11px] dark:border-border-dark dark:bg-sidebar-dark2 w-full border border-border-light rounded-5 text-xs text-content"/&gt;
                           |       &lt;/div&gt; 
                           |       &lt;div class="flex flex-col gap-1"&gt; 
                           |           &lt;label for="password" class="text-xs font-medium text-primary"&gt;Password&lt;/label&gt;
-                          |           &lt;input type="password"  placeholder="Password.." class="p-[11px] dark:border-border-dark dark:bg-sidebar-dark2 w-full border border-border-light rounded-5 text-xs text-content"/&gt;
+                          |           &lt;input type="password"  placeholder="Password" class="p-[11px] dark:border-border-dark dark:bg-sidebar-dark2 w-full border border-border-light rounded-5 text-xs text-content"/&gt;
                           |       &lt;/div&gt; 
                           |       &lt;div class="flex flex-wrap gap-1"&gt; 
                           |           &lt;button class="text-white btn btn-primary"&gt;Submit&lt;/button&gt;
@@ -97,10 +97,10 @@ html(lang='en')
                         div.flex.flex-col.gap-3.form-group
                           div.flex.flex-col.gap-1
                             label(for="address").font-medium.text-xs.text-primary Current Address
-                            textarea(placeholder="Enter the address.." row="3" id="address" class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
+                            textarea(placeholder="Current address" row="3" id="address" class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
                           div.flex.flex-col.gap-1
                             label(for="address").font-medium.text-xs.text-primary Permanent Address
-                            textarea(placeholder="Enter the address.." row="3" id="address" class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
+                            textarea(placeholder="Permanent address" row="3" id="address" class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark").w-full.border.border-border-light.rounded-5.text-xs.text-content
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
@@ -109,12 +109,12 @@ html(lang='en')
                           |&lt;form&gt; 
                           |   &lt;div class="flex flex-col gap-2 form-group"&gt;
                           |       &lt;div class="flex flex-col gap-1"&gt; 
-                          |           &lt;label for="address" class="dark:bg-sidebar-dark2  text-xs font-medium text-primary "&gt;Current Address &lt;/label&gt;
-                          |           &lt;textarea placeholder="Enter the address.." row="3" id="address" class="dark:border-border-dark p-[11px] w-full border border-border-light rounded-5 text-xs text-content"&gt;
+                          |           &lt;label for="address" class="text-xs font-medium dark:bg-sidebar-dark2 text-primary "&gt;Current Address &lt;/label&gt;
+                          |           &lt;textarea placeholder="Enter the address" row="3" id="address" class="dark:border-border-dark p-[11px] w-full border border-border-light rounded-5 text-xs text-content"&gt;
                           |       &lt;/div&gt;
                           |       &lt;div class="flex flex-col gap-1"&gt; 
-                          |           &lt;label for="address" class="dark:bg-sidebar-dark2  text-xs font-medium text-primary  "&gt;Permanent Address &lt;/label&gt;
-                          |           &lt;textarea placeholder="Enter the address.." row="3" id="address" class="dark:border-border-dark p-[11px] w-full border border-border-light rounded-5 text-xs text-content"&gt;
+                          |           &lt;label for="address" class="text-xs font-medium dark:bg-sidebar-dark2 text-primary "&gt;Permanent Address &lt;/label&gt;
+                          |           &lt;textarea placeholder="Enter the address" row="3" id="address" class="dark:border-border-dark p-[11px] w-full border border-border-light rounded-5 text-xs text-content"&gt;
                           |       &lt;/div&gt; 
                           |   &lt;/div&gt; 
                           |&lt;/form&gt; 
