--- a/assets/pug/pages/template/otp.pug
+++ b/assets/pug/pages/template/otp.pug
@@ -17,16 +17,16 @@ html(lang='en')
     body(dir="ltr" class="unique-skin")
         main.page-wrapper
             // Page Body Start
-            div.page-body(class="h-[100vh]")
-                div(class="!flex items-center justify-center h-full p-[.9375rem] common-animate-main").ratio_asos
+            div.page-body(class="h-[100vh] !mt-0")
+                div(class="!flex items-center justify-center h-full common-animate-main p-2").ratio_asos
                     img(class="bg-img" src="../../assets/images/dotsbg.jpg")
                     div(class=" grid grid-cols-12 gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center items-center")
-                        div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] max-h-max")
+                        div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max")
                             form.theme-form.flex.flex-col.gap-3(class="!m-0 p-8 2sm:p-4" action="reset-password.html")
-                                h3 Verification code
+                                h3 Verification Code
                                 p(class="!mb-0") We have sent the code verification to your email address
                                 span.justify-center.mt-0.edit.flex.items-center.gap-2(class="text-xs !text-primary mt-[15px]")
-                                    | User2211@gmail.com 
+                                    | emayiladosidorshina@gmail.com 
                                     a(href="forgot-password.html") 
                                         i(class="w-5 h-5 stroke-primary" data-feather="edit-3")
                                 div.flex.items-center.gap-2.mt-6
