--- a/assets/pug/pages/template/reset-password.pug
+++ b/assets/pug/pages/template/reset-password.pug
@@ -14,18 +14,18 @@ html(lang='en')
     body(dir="ltr" class="unique-skin")
         main.page-wrapper
             // Page Body Start
-            div.page-body(class="h-[100vh]")
+            div.page-body(class="h-[100vh] !mt-0")
                 div(class="!flex items-center justify-center h-full p-[.9375rem] common-animate-main").ratio_asos
                     img(class="bg-img" src="../../assets/images/dotsbg.jpg")
                     div(class=" grid grid-cols-12 gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center items-center")
-                        div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] max-h-max")
+                        div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max")
                             form.theme-form.flex.flex-col.gap-3(class="!m-0 p-8 2sm:p-4" action="login.html")
-                                h3 Reset password
+                                h3 Reset Password
                                 p See your growth and get consulting support!
                                 div
-                                    input(type="text" placeholder="New password.." required)
+                                    input(type="text" placeholder="New password" required)
                                 div
-                                    input(type="text" placeholder="Confirm password.." required)
+                                    input(type="text" placeholder="Confirm password" required)
                                 button.btn.btn-primary.text-white(class="hover:drop-shadow-lg") Reset
                                 div
                                     h4 Or Sign in with 
