--- a/html/template/error.html
+++ b/html/template/error.html
@@ -23,7 +23,7 @@
   <body class="unique-skin" dir="ltr">
     <main class="page-wrapper">
       <!-- Page Body Start-->
-      <div class="page-body h-[100vh]">
+      <div class="page-body h-[100vh] !mt-0">
         <div class="flex items-center flex-col justify-center text-center common-animate-main">
           <div class="w-full relative max-w-[35%] 4xl:max-w-[40%] xl:max-w-[48%] lg:max-w-[55%] md:max-w-[68%] sm:max-w-[75%] 2sm:max-w-[80%]"><img class="w-full" src="../../assets/images/svg/404.svg" alt="404"><img class="common-animate ops-svg animate__animated animate__infinite animate__shakeY animate__slower" src="../../assets/images/svg/opps.svg"></div>
           <div class="mt-3 mb-4">
@@ -114,8 +114,6 @@
   <script src="../../assets/js/feather-custom.js"></script>
   <!-- Select Js -->
   <script src="../../assets/js/custom-select.js"></script>
-  <!-- customizer js-->
-  <script src="../../assets/js/customizer.js"> </script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js">  </script>
 </html>
