--- a/html/template/form-validation.html
+++ b/html/template/form-validation.html
@@ -1025,11 +1025,11 @@
                         <form class="theme-form flex flex-col gap-4 !m-0">
                           <div>
                             <label for="email1">Email</label>
-                            <input type="email" id="email1" placeholder="Enter your email id.." required="">
+                            <input type="email" id="email1" placeholder="Enter your email id" required="">
                           </div>
                           <div>
                             <label for="password1">Password</label>
-                            <input type="password" id="password1" required="" placeholder="Enter your password..">
+                            <input type="password" id="password1" required="" placeholder="Enter your password">
                           </div>
                           <div class="flex justify-end items-center">
                             <button class="btn btn-primary text-white text-xs font-semibold py-2 !m-0 !w-fit" type="submit">Submit</button>
@@ -1043,11 +1043,11 @@
   &lt;form class="theme-form flex flex-col gap-4 !m-0"&gt;
      &lt;div&gt;
          &lt;label for="email1&gt;Email&lt;/label&gt; 
-         &lt;input type="email" id="email1" placeholder='Enter your email id..' required=''&gt;&lt;/input&gt; 
+         &lt;input type="email" id="email1" placeholder='Enter your email id' required=''&gt;&lt;/input&gt; 
      &lt;/div&gt;
      &lt;div&gt;
          &lt;label for="password1&gt;Password&lt;/label&gt; 
-         &lt;input type="password" id="password1" placeholder='Enter your password..' required=''&gt;&lt;/input&gt; 
+         &lt;input type="password" id="password1" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
      &lt;/div&gt;
      &lt;div class="flex items-center justify-end"&gt;
          &lt;button class="btn btn-primary text-white text-sm font-semibold py-2 !m-0 !w-fit" type="submit"&gt;Submit&lt;/button&gt; 
@@ -1095,11 +1095,11 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div&gt;
   &lt;form class="flex flex-col gap-4 !m-0"&gt;
      &lt;div class="relative z-0 w-full mt-7 group"&gt;
-         &lt;input type="email" id="#floating_email" required='' class="block w-full dark:border-b-2  px-0 text-xs bg-transparent border-0 border-b-2 appearance-none text-content3 border-border-light peer"&gt;&lt;/input&gt; 
+         &lt;input type="email" id="#floating_email" required='' class="block w-full px-0 text-xs bg-transparent border-0 border-b-2 appearance-none dark:border-b-2 text-content3 border-border-light peer"&gt;&lt;/input&gt; 
          &lt;label for="floating_email" class="absolute text-xs duration-300 transform -translate-y-9  text-content3 top-3 -z-10 peer-focus:font-medium dark:text-content3 origin-[0] peer-focus:left-0 rtl:peer-focus:left-unset rtl:peer-focus:right-0 peer-focus:text-primary peer-focus:dark:text-content3 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-9"&gt;Email&lt;/label&gt; 
      &lt;/div&gt;
      &lt;div class="relative z-0 w-full mt-7 group"&gt;
-         &lt;input type="password" id="#floating_password" required='' class="block w-full  dark:border-b-2  px-0 text-xs bg-transparent border-0 border-b-2 appearance-none text-content3 border-border-light peer"&gt;&lt;/input&gt; 
+         &lt;input type="password" id="#floating_password" required='' class="block w-full px-0 text-xs bg-transparent border-0 border-b-2 appearance-none dark:border-b-2 text-content3 border-border-light peer"&gt;&lt;/input&gt; 
          &lt;label for="floating_password" class="absolute text-xs duration-300 transform -translate-y-9  text-content3 top-3 -z-10 peer-focus:font-medium dark:text-content3 origin-[0] peer-focus:left-0 rtl:peer-focus:left-unset rtl:peer-focus:right-0 peer-focus:text-primary peer-focus:dark:text-content3 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-9"&gt;Password&lt;/label&gt; 
      &lt;/div&gt;                                                    
      &lt;div class="flex items-center justify-end"&gt;
@@ -1131,15 +1131,15 @@
                         <form class="theme-form flex flex-col gap-4 !m-0" id="form-validation">
                           <div>
                             <label for="username">Name</label>
-                            <input id="username" type="text" placeholder="Enter your name.."><small>Error Message</small>
+                            <input id="username" type="text" placeholder="Enter your name"><small>Error Message</small>
                           </div>
                           <div>
                             <label for="email">Email</label>
-                            <input id="email" type="email" placeholder="Enter email id.."><small>Error Message</small>
+                            <input id="email" type="email" placeholder="Enter email id"><small>Error Message</small>
                           </div>
                           <div>
                             <label for="password">Password </label>
-                            <input id="password" type="password" placeholder="Enter your password.."><small>Error Message</small>
+                            <input id="password" type="password" placeholder="Enter your password"><small>Error Message</small>
                           </div>
                           <div class="flex justify-end items-center">
                             <button class="btn btn-primary text-white text-xs font-semibold py-2 !m-0 !w-fit" type="submit">Submit</button>
@@ -1153,17 +1153,17 @@
   &lt;form class="flex flex-col gap-4 !m-0 theme-form" id="form-validation"&gt;
      &lt;div&gt;
          &lt;label for="username"&gt;Name&lt;/label&gt; 
-         &lt;input type="text" id="username" required='' placeholder='Enter your name..'&gt;&lt;/input&gt;
+         &lt;input type="text" id="username" required='' placeholder='Enter your name'&gt;&lt;/input&gt;
          &lt;small&gt;Error Message&lt;/small&gt; 
      &lt;/div&gt;
      &lt;div&gt;
          &lt;label for="email"&gt;Email&lt;/label&gt; 
-         &lt;input type="email" id="email" required='' placeholder='Enter email id..&gt;&lt;/input&gt; 
+         &lt;input type="email" id="email" required='' placeholder='Enter email id&gt;&lt;/input&gt; 
          &lt;small&gt;Error Message&lt;/small&gt; 
      &lt;/div&gt;
      &lt;div&gt;
          &lt;label for="password"&gt;Password&lt;/label&gt; 
-         &lt;input type="password" id="password" required='' placeholder='Enter your password..&gt;&lt;/input&gt; 
+         &lt;input type="password" id="password" required='' placeholder='Enter your password&gt;&lt;/input&gt; 
          &lt;small&gt;Error Message&lt;/small&gt; 
      &lt;/div&gt;
      &lt;div class="flex items-center justify-end"&gt;
@@ -1215,11 +1215,11 @@
                               <h6 class="text-title font-semibold">Basic Info:</h6>
                               <div>
                                 <label for="firstName">First Name</label>
-                                <input type="text" id="firstName" placeholder="Enter your first name.." required>
+                                <input type="text" id="firstName" placeholder="Enter your first name" required>
                               </div>
                               <div>
                                 <label for="lastName">Last Name</label>
-                                <input type="text" id="lastName" placeholder="Enter your last name.." required>
+                                <input type="text" id="lastName" placeholder="Enter your last name" required>
                               </div>
                               <div class="flex justify-end items-center">
                                 <button class="text-xs btn btn-primary text-white py-2 firstNext next !w-fit !m-0">Next</button>
@@ -1229,11 +1229,11 @@
                               <h6 class="text-title font-semibold">Contact Details:</h6>
                               <div>
                                 <label for="email">Email</label>
-                                <input type="email" id="email" placeholder="Enter your email id.." required>
+                                <input type="email" id="email" placeholder="Enter your email id" required>
                               </div>
                               <div>
                                 <label for="contact">Contact</label>
-                                <input type="number" id="contact" placeholder="Enter your contact.." required>
+                                <input type="number" id="contact" placeholder="Enter your contact" required>
                               </div>
                               <div class="btns flex justify-end items-center gap-3">
                                 <button class="text-xs btn btn-secondary text-white py-2 prev-1 prev !w-fit !m-0">Previous</button>
@@ -1244,11 +1244,11 @@
                               <h6 class="text-title font-semibold">Login Details:</h6>
                               <div>
                                 <label for="name">Username </label>
-                                <input type="text" id="name" placeholder="Enter your username.." required>
+                                <input type="text" id="name" placeholder="Enter your username" required>
                               </div>
                               <div>
                                 <label for="password1">Password</label>
-                                <input type="password" id="password1" placeholder="Enter your password.." required>
+                                <input type="password" id="password1" placeholder="Enter your password" required>
                               </div>
                               <div class="btns flex justify-end items-center gap-3">
                                 <button class="text-xs btn btn-secondary text-white py-2 prev-2 prev !w-fit !m-0">Previous</button>
@@ -1297,11 +1297,11 @@
               &lt;h6 class="font-semibold text-title"&gt;Basic Info:&lt;/h6&gt;
               &lt;div&gt;
                   &lt;label for="firstName"&gt;First Name&lt;/label&gt;
-                  &lt;input type="text" id="firstName" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                  &lt;input type="text" id="firstName" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
               &lt;/div&gt;
               &lt;div&gt;
                   &lt;label for="lastName"&gt;Last Name&lt;/label&gt;
-                  &lt;input type="text" id="lastName" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                  &lt;input type="text" id="lastName" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
               &lt;/div&gt;
               &lt;div class="flex items-center justify-end"&gt;
                   &lt;button class="text-xs btn btn-primary text-white py-2 firstNext next !w-fit !m-0"&gt;Next&lt;/button&gt;
@@ -1311,11 +1311,11 @@
               &lt;h6 class="font-semibold text-title"&gt;Basic Info:&lt;/h6&gt;
               &lt;div&gt;
                   &lt;label for="email"&gt;Email&lt;/label&gt;
-                  &lt;input type="email" id="email" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                  &lt;input type="email" id="email" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
               &lt;/div&gt;
               &lt;div&gt;
                   &lt;label for="contact"&gt;Contact&lt;/label&gt;
-                  &lt;input type="number" id="contact" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                  &lt;input type="number" id="contact" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
               &lt;/div&gt;
               &lt;div class="flex items-center justify-end"&gt;
                   &lt;button class="text-xs btn btn-primary text-white py-2 prev-1 prev !w-fit !m-0"&gt;Previous&lt;/button&gt;
@@ -1326,17 +1326,18 @@
               &lt;h6 class="font-semibold text-title"&gt;Basic Info:&lt;/h6&gt;
               &lt;div&gt;
                   &lt;label for="name"&gt;Username&lt;/label&gt;
-                  &lt;input type="text" id="name" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                  &lt;input type="text" id="name" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
               &lt;/div&gt;
               &lt;div&gt;
                   &lt;label for="password1"&gt;Password&lt;/label&gt;
-                  &lt;input type="password" id="password1" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                  &lt;input type="password" id="password1" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
               &lt;/div&gt;
               &lt;div class="flex items-center justify-end"&gt;
                   &lt;button class="text-xs btn btn-primary text-white py-2 prev-2 prev !w-fit !m-0"&gt;Previous&lt;/button&gt;
                   &lt;button class="text-xs btn btn-primary text-white py-2 submit !w-fit !m-0"&gt;Submit&lt;/button&gt;
               &lt;/div&gt;
-          &lt;/div&gt;                                                    |       &lt;/form&gt;
+          &lt;/div&gt;                                                    |       
+      &lt;/form&gt;
    &lt;/div&gt;
 &lt;/div&gt;</code></pre>
                     </div>
