--- a/html/template/input-textarea.html
+++ b/html/template/input-textarea.html
@@ -1023,11 +1023,11 @@
                         <div class="flex flex-col gap-3 form-group">
                           <div class="flex flex-col gap-1">
                             <label class="font-medium text-xs text-primary" for="email">Email</label>
-                            <input class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark w-full border border-border-light rounded-5 text-xs text-content" type="email" placeholder="Enter your email id..">
+                            <input class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark w-full border border-border-light rounded-5 text-xs text-content" type="email" placeholder="Enter your email id">
                           </div>
                           <div class="flex flex-col gap-1">
                             <label class="font-medium text-xs text-primary" for="password">Password</label>
-                            <input class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark w-full border border-border-light rounded-5 text-xs text-content" type="password" placeholder="Password..">
+                            <input class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark w-full border border-border-light rounded-5 text-xs text-content" type="password" placeholder="Password">
                           </div>
                           <div class="flex flex-wrap gap-1">
                             <button class="btn btn-primary text-white">Submit</button>
@@ -1041,11 +1041,11 @@
   &lt;div class="flex flex-col gap-3 form-group"&gt;
       &lt;div class="flex flex-col gap-1"&gt; 
           &lt;label for="email" class="text-xs font-medium text-primary"&gt;Email&lt;/label&gt;
-          &lt;input type="email"  placeholder="Enter your email id.." class="p-[11px] dark:border-border-dark dark:bg-sidebar-dark2 w-full border border-border-light rounded-5 text-xs text-content"/&gt;
+          &lt;input type="email"  placeholder="Enter your email id" class="p-[11px] dark:border-border-dark dark:bg-sidebar-dark2 w-full border border-border-light rounded-5 text-xs text-content"/&gt;
       &lt;/div&gt; 
       &lt;div class="flex flex-col gap-1"&gt; 
           &lt;label for="password" class="text-xs font-medium text-primary"&gt;Password&lt;/label&gt;
-          &lt;input type="password"  placeholder="Password.." class="p-[11px] dark:border-border-dark dark:bg-sidebar-dark2 w-full border border-border-light rounded-5 text-xs text-content"/&gt;
+          &lt;input type="password"  placeholder="Password" class="p-[11px] dark:border-border-dark dark:bg-sidebar-dark2 w-full border border-border-light rounded-5 text-xs text-content"/&gt;
       &lt;/div&gt; 
       &lt;div class="flex flex-wrap gap-1"&gt; 
           &lt;button class="text-white btn btn-primary"&gt;Submit&lt;/button&gt;
@@ -1076,11 +1076,11 @@
                         <div class="flex flex-col gap-3 form-group">
                           <div class="flex flex-col gap-1">
                             <label class="font-medium text-xs text-primary" for="address">Current Address</label>
-                            <textarea class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter the address.." row="3" id="address"></textarea>
+                            <textarea class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark w-full border border-border-light rounded-5 text-xs text-content" placeholder="Current address" row="3" id="address"></textarea>
                           </div>
                           <div class="flex flex-col gap-1">
                             <label class="font-medium text-xs text-primary" for="address">Permanent Address</label>
-                            <textarea class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter the address.." row="3" id="address"></textarea>
+                            <textarea class="p-[11px] dark:bg-sidebar-dark2 dark:border-border-dark w-full border border-border-light rounded-5 text-xs text-content" placeholder="Permanent address" row="3" id="address"></textarea>
                           </div>
                         </div>
                       </form>
@@ -1090,12 +1090,12 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;form&gt; 
   &lt;div class="flex flex-col gap-2 form-group"&gt;
       &lt;div class="flex flex-col gap-1"&gt; 
-          &lt;label for="address" class="dark:bg-sidebar-dark2  text-xs font-medium text-primary "&gt;Current Address &lt;/label&gt;
-          &lt;textarea placeholder="Enter the address.." row="3" id="address" class="dark:border-border-dark p-[11px] w-full border border-border-light rounded-5 text-xs text-content"&gt;
+          &lt;label for="address" class="text-xs font-medium dark:bg-sidebar-dark2 text-primary "&gt;Current Address &lt;/label&gt;
+          &lt;textarea placeholder="Enter the address" row="3" id="address" class="dark:border-border-dark p-[11px] w-full border border-border-light rounded-5 text-xs text-content"&gt;
       &lt;/div&gt;
       &lt;div class="flex flex-col gap-1"&gt; 
-          &lt;label for="address" class="dark:bg-sidebar-dark2  text-xs font-medium text-primary  "&gt;Permanent Address &lt;/label&gt;
-          &lt;textarea placeholder="Enter the address.." row="3" id="address" class="dark:border-border-dark p-[11px] w-full border border-border-light rounded-5 text-xs text-content"&gt;
+          &lt;label for="address" class="text-xs font-medium dark:bg-sidebar-dark2 text-primary "&gt;Permanent Address &lt;/label&gt;
+          &lt;textarea placeholder="Enter the address" row="3" id="address" class="dark:border-border-dark p-[11px] w-full border border-border-light rounded-5 text-xs text-content"&gt;
       &lt;/div&gt; 
   &lt;/div&gt; 
 &lt;/form&gt; </code></pre>
