--- a/assets/postcss/components/_layout.css
+++ b/assets/postcss/components/_layout.css
@@ -6,16 +6,16 @@
   main{
     .page-body{
       @apply lg:mt-[calc(125px_+_(90_-_125)_*_((100vw_-_320px)_/_(1920_-_320)))] mt-[7.5rem] md:mt-[6.875rem];
-      .apexcharts{
-        &-canvas {
-        [dir='rtl'] & {
-          direction: ltr;
+        .apexcharts{
+          &-canvas {
+          [dir='rtl'] & {
+            direction: ltr;
+          }
         }
-      }
       }
       .common-animate-main{
         .common-animate{
-          animation-duration: 12000ms;
+          animation-duration: 12000ms !important;
         }
       }
     }
