--- a/assets/postcss/pages/_chat-app.css
+++ b/assets/postcss/pages/_chat-app.css
@@ -11,7 +11,7 @@
   }
 
   .right-sidebar-aside {
-    @apply z-[3] transition-all duration-1000 !max-w-[23.5625rem] absolute 2xl:right-0 2xl:top-0 2xl:bg-white 2xl:w-[17.1875rem] sm:!w-[17.1875rem];
+    @apply z-[3] transition-all duration-1000 !max-w-[23.5625rem] absolute 2xl:right-0 2xl:top-0 2xl:bg-white 2xl:w-[17.1875rem] sm:!w-[18.1875rem];
     width: -webkit-fill-available;
     &.right-hide-show-sidebar {
       @apply !right-[-31.25rem];
@@ -19,7 +19,7 @@
   }
 
   .left-sidebar-aside {
-    @apply lg:z-[3] transition-all duration-1000 lg:absolute lg:!left-[-31.25rem] lg:top-0 lg:bg-white lg:w-[23.5625rem] sm:w-[17.1875rem];
+    @apply lg:z-[3] transition-all duration-1000 lg:absolute lg:!left-[-31.25rem] lg:top-0 lg:bg-white lg:w-[23.5625rem] sm:w-[18.1875rem];
 
     &.left-hide-show-sidebar {
       @apply !left-0;
@@ -171,6 +171,22 @@
   .group-videocall {
     img {
       @apply object-cover;
+    }
+  }
+  .accept-call-end{
+    &.hide{
+      .modal, 
+      .modal-overlay{
+        @apply !hidden;
+      }
+    }
+  }
+  .accept-call-start{
+     &.show{
+      .modal, 
+      .modal-overlay{
+        @apply !block visible ;
+      }
     }
   }
 }
