--- a/assets/pug/layout/chat-layout/chat-main.pug
+++ b/assets/pug/layout/chat-layout/chat-main.pug
@@ -13,7 +13,7 @@ div.overflow-auto.custom-scroll(class="p-6 mx-4 bg-gray-light dark:bg-sidebar-da
             span.timer 5:27 PM
             span.sender-receiver-name Josephin Water
           p Hii i am Josephin, can you help me to find best chat app?
-          p it should from elite auther
+          p it should from elite author
   div.message.message-receiver 
     div.message-box 
       div.message-content
@@ -24,7 +24,7 @@ div.overflow-auto.custom-scroll(class="p-6 mx-4 bg-gray-light dark:bg-sidebar-da
             span.timer 5:27 PM
             span.sender-receiver-name Dmitriy Groshev    
           p Hi i am Dmitriy Groshev
-          p Your personal assistant to helo you
+          p Your personal assistant to help you
   div.message.message-sender
     div.message-box
       div.message-content
@@ -32,10 +32,10 @@ div.overflow-auto.custom-scroll(class="p-6 mx-4 bg-gray-light dark:bg-sidebar-da
           img(src='../../assets/images/avatar/3.jpg' alt='avatar')
         div.content
           div.flex.gap-2.items-center.content-detail
-            span.timer 5:27 PM
+            span.timer 5:28 PM
             span.sender-receiver-name Josephin Water    
           p Hii i am josephin, can you help me to find best chat app?
-          p it should from elite auther
+          p it should from elite author
   div.message.message-receiver
     div.message-box
       div.message-content
@@ -43,9 +43,9 @@ div.overflow-auto.custom-scroll(class="p-6 mx-4 bg-gray-light dark:bg-sidebar-da
           img(src='../../assets/images/avatar/2.jpg' alt='avatar')
         div.content
           div.flex.gap-2.items-center.content-detail.flex-row-reverse
-            span.timer 5:27 PM
+            span.timer 5:29 PM
             span.sender-receiver-name Dmitriy Groshev    
-          p Sure, backy is best theme for chating project, you can check it here.
-          p it should from elite auther
+          p Sure, backy is best theme for chatting project, you can check it here.
+          p it should from elite author
 
 // chat main end
