--- a/assets/pug/layout/chat-layout/chat-right-sidebar.pug
+++ b/assets/pug/layout/chat-layout/chat-right-sidebar.pug
@@ -31,7 +31,7 @@ div.border-l.border-gray-light.tabs.flex-col.gap-0.right-sidebar-aside(class="rt
         p Link
     div.tabs-content
       div(data-tabContent="1" class="tab-pan !p-0 !border-0 active show first:rounded-tl-none rounded-5")                                     
-        div.p-4.overflow-auto(class="max-h-[288px] md:max-h-screen custom-scroll")
+        div.px-4.pb-4.mt-4.overflow-auto(class="max-h-[268px] md:max-h-screen custom-scroll")
           div#my-gallery.grid.grid-cols-12.gap-4.pswp-gallery
             div.col-span-12
               a(href='../../assets/images/chat-app/1.jpg' data-pswp-width='1000' data-pswp-height='500' target='_blank')
@@ -46,11 +46,11 @@ div.border-l.border-gray-light.tabs.flex-col.gap-0.right-sidebar-aside(class="rt
               a(href='../../assets/images/chat-app/1.jpg' data-pswp-width='1000' data-pswp-height='500' target='_blank')
                 img(src='../../assets/images/chat-app/1.jpg' alt="image-1" class="w-full max-h-[120px] rounded-[10px]")
       div(data-tabContent="2" class="tab-pan !p-0 !border-0 first:rounded-tl-none rounded-5")
-        div.p-4.overflow-auto(class="max-h-[288px] md:max-h-screen custom-scroll")
+        div.p-4.overflow-auto(class="max-h-[268px] md:max-h-screen custom-scroll")
           +chat-doc-data(CHAT_DOC_DATA)               
 
       div(data-tabContent="3" class="tab-pan !p-0 !border-0 first:rounded-tl-none rounded-5")
-        div.p-4.overflow-auto(class="max-h-[288px] md:max-h-screen custom-scroll")
+        div.p-4.overflow-auto(class="max-h-[268px] md:max-h-screen custom-scroll")
           +chat-link-data(CHAT_LINK_DATA) 
 
     div.p-4.pb-0.contact-setting.border-t.border-dashed.border-gray-light(class="dark:border-t dark:border-border-dark")
