--- a/assets/pug/pages/template/coming-soon.pug
+++ b/assets/pug/pages/template/coming-soon.pug
@@ -11,11 +11,11 @@ html(lang='en')
     body(dir="ltr" class="unique-skin")
         main.page-wrapper
             // Page Body Start
-            div.page-body(class="h-[100vh]")
+            div.page-body(class="h-[100vh] !mt-0")
                 div(class="!flex items-center justify-center h-full p-[.9375rem] common-animate-main").ratio_asos
                     img(class="bg-img" src="../../assets/images/dotsbg.jpg")
                     div(class=" grid grid-cols-12 gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center items-center")
-                        div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] h-max")
+                        div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] h-max")
                             form.theme-form.flex.flex-col.gap-3(class="!m-0 p-8 2sm:p-4" action="index.html")
                                 h3 Coming Soon!!
                                 p(class="!mb-4") We're working hard to give you the best experience!
@@ -35,7 +35,7 @@ html(lang='en')
                                                 span.seconds.time-value 
                                                 span.timer-label Sec
                                 div
-                                    input(type="email" placeholder="Enter your id.." required)
+                                    input(type="email" placeholder="Enter your id" required)
                                 button.btn.btn-primary.text-white(class="hover:drop-shadow-lg !mt-2 !mb-3") Notify Me
                                 div.flex.items-center.gap-1
                                     i(data-feather="chevrons-left" class="w-5 h-5 stroke-primary")
