--- a/assets/pug/pages/template/form-validation.pug
+++ b/assets/pug/pages/template/form-validation.pug
@@ -62,10 +62,10 @@ html(lang='en')
                         form.theme-form(class="flex flex-col gap-4 !m-0")
                           div
                             label(for='email1') Email
-                            input(type='email' id="email1" placeholder='Enter your email id..' required='')
+                            input(type='email' id="email1" placeholder='Enter your email id' required='')
                           div
                             label(for='password1') Password
-                            input(type='password' id='password1' required='' placeholder="Enter your password..")
+                            input(type='password' id='password1' required='' placeholder="Enter your password")
                           div.flex.justify-end.items-center
                             button.btn.btn-primary.text-white.text-xs.font-semibold(type='submit' class="py-2 !m-0 !w-fit") Submit
 
@@ -78,11 +78,11 @@ html(lang='en')
                           |   &lt;form class="theme-form flex flex-col gap-4 !m-0"&gt;
                           |      &lt;div&gt;
                           |          &lt;label for="email1&gt;Email&lt;/label&gt; 
-                          |          &lt;input type="email" id="email1" placeholder='Enter your email id..' required=''&gt;&lt;/input&gt; 
+                          |          &lt;input type="email" id="email1" placeholder='Enter your email id' required=''&gt;&lt;/input&gt; 
                           |      &lt;/div&gt;
                           |      &lt;div&gt;
                           |          &lt;label for="password1&gt;Password&lt;/label&gt; 
-                          |          &lt;input type="password" id="password1" placeholder='Enter your password..' required=''&gt;&lt;/input&gt; 
+                          |          &lt;input type="password" id="password1" placeholder='Enter your password' required=''&gt;&lt;/input&gt; 
                           |      &lt;/div&gt;
                           |      &lt;div class="flex items-center justify-end"&gt;
                           |          &lt;button class="btn btn-primary text-white text-sm font-semibold py-2 !m-0 !w-fit" type="submit"&gt;Submit&lt;/button&gt; 
@@ -122,11 +122,11 @@ html(lang='en')
                           |&lt;div&gt;
                           |   &lt;form class="flex flex-col gap-4 !m-0"&gt;
                           |      &lt;div class="relative z-0 w-full mt-7 group"&gt;
-                          |          &lt;input type="email" id="#floating_email" required='' class="block w-full dark:border-b-2  px-0 text-xs bg-transparent border-0 border-b-2 appearance-none text-content3 border-border-light peer"&gt;&lt;/input&gt; 
+                          |          &lt;input type="email" id="#floating_email" required='' class="block w-full px-0 text-xs bg-transparent border-0 border-b-2 appearance-none dark:border-b-2 text-content3 border-border-light peer"&gt;&lt;/input&gt; 
                           |          &lt;label for="floating_email" class="absolute text-xs duration-300 transform -translate-y-9  text-content3 top-3 -z-10 peer-focus:font-medium dark:text-content3 origin-[0] peer-focus:left-0 rtl:peer-focus:left-unset rtl:peer-focus:right-0 peer-focus:text-primary peer-focus:dark:text-content3 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-9"&gt;Email&lt;/label&gt; 
                           |      &lt;/div&gt;
                           |      &lt;div class="relative z-0 w-full mt-7 group"&gt;
-                          |          &lt;input type="password" id="#floating_password" required='' class="block w-full  dark:border-b-2  px-0 text-xs bg-transparent border-0 border-b-2 appearance-none text-content3 border-border-light peer"&gt;&lt;/input&gt; 
+                          |          &lt;input type="password" id="#floating_password" required='' class="block w-full px-0 text-xs bg-transparent border-0 border-b-2 appearance-none dark:border-b-2 text-content3 border-border-light peer"&gt;&lt;/input&gt; 
                           |          &lt;label for="floating_password" class="absolute text-xs duration-300 transform -translate-y-9  text-content3 top-3 -z-10 peer-focus:font-medium dark:text-content3 origin-[0] peer-focus:left-0 rtl:peer-focus:left-unset rtl:peer-focus:right-0 peer-focus:text-primary peer-focus:dark:text-content3 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-9"&gt;Password&lt;/label&gt; 
                           |      &lt;/div&gt;                                                    
                           |      &lt;div class="flex items-center justify-end"&gt;
@@ -153,15 +153,15 @@ html(lang='en')
                         form#form-validation.theme-form(class="flex flex-col gap-4 !m-0")
                           div
                             label(for='username') Name
-                            input#username(type='text' placeholder='Enter your name..')
+                            input#username(type='text' placeholder='Enter your name')
                             small Error Message
                           div
                             label(for='email') Email
-                            input#email(type='email' placeholder='Enter email id..')
+                            input#email(type='email' placeholder='Enter email id')
                             small Error Message
                           div
                             label(for='password') Password 
-                            input#password(type='password' placeholder='Enter your password..')
+                            input#password(type='password' placeholder='Enter your password')
                             small Error Message
                           div.flex.justify-end.items-center
                             button.btn.btn-primary.text-white.text-xs.font-semibold(type='submit' class="py-2 !m-0 !w-fit") Submit
@@ -175,17 +175,17 @@ html(lang='en')
                           |   &lt;form class="flex flex-col gap-4 !m-0 theme-form" id="form-validation"&gt;
                           |      &lt;div&gt;
                           |          &lt;label for="username"&gt;Name&lt;/label&gt; 
-                          |          &lt;input type="text" id="username" required='' placeholder='Enter your name..'&gt;&lt;/input&gt;
+                          |          &lt;input type="text" id="username" required='' placeholder='Enter your name'&gt;&lt;/input&gt;
                           |          &lt;small&gt;Error Message&lt;/small&gt; 
                           |      &lt;/div&gt;
                           |      &lt;div&gt;
                           |          &lt;label for="email"&gt;Email&lt;/label&gt; 
-                          |          &lt;input type="email" id="email" required='' placeholder='Enter email id..&gt;&lt;/input&gt; 
+                          |          &lt;input type="email" id="email" required='' placeholder='Enter email id&gt;&lt;/input&gt; 
                           |          &lt;small&gt;Error Message&lt;/small&gt; 
                           |      &lt;/div&gt;
                           |      &lt;div&gt;
                           |          &lt;label for="password"&gt;Password&lt;/label&gt; 
-                          |          &lt;input type="password" id="password" required='' placeholder='Enter your password..&gt;&lt;/input&gt; 
+                          |          &lt;input type="password" id="password" required='' placeholder='Enter your password&gt;&lt;/input&gt; 
                           |          &lt;small&gt;Error Message&lt;/small&gt; 
                           |      &lt;/div&gt;
                           |      &lt;div class="flex items-center justify-end"&gt;
@@ -234,10 +234,10 @@ html(lang='en')
                               h6.text-title.font-semibold Basic Info:
                               div
                                 label(for="firstName") First Name
-                                input(type="text" id="firstName" placeholder="Enter your first name.." required)
+                                input(type="text" id="firstName" placeholder="Enter your first name" required)
                               div
                                 label(for="lastName") Last Name
-                                input(type="text" id="lastName" placeholder="Enter your last name.." required)
+                                input(type="text" id="lastName" placeholder="Enter your last name" required)
                               div.flex.justify-end.items-center
                                 button.text-xs.btn.btn-primary.text-white.py-2.firstNext.next(class="!w-fit !m-0") Next
 
@@ -245,10 +245,10 @@ html(lang='en')
                               h6.text-title.font-semibold Contact Details:
                               div
                                 label(for="email") Email
-                                input(type="email" id="email" placeholder="Enter your email id.." required)
+                                input(type="email" id="email" placeholder="Enter your email id" required)
                               div
                                 label(for="contact") Contact
-                                input(type="number" id="contact" placeholder="Enter your contact.." required)
+                                input(type="number" id="contact" placeholder="Enter your contact" required)
 
                               div.btns.flex.justify-end.items-center.gap-3
                                 button.text-xs.btn.btn-secondary.text-white.py-2.prev-1.prev(class="!w-fit !m-0") Previous
@@ -257,10 +257,10 @@ html(lang='en')
                               h6.text-title.font-semibold Login Details:
                               div
                                 label(for="name") Username 
-                                input(type="text" id="name" placeholder="Enter your username.." required)
+                                input(type="text" id="name" placeholder="Enter your username" required)
                               div
                                 label(for="password1") Password
-                                input(type="password" id="password1" placeholder="Enter your password.." required)
+                                input(type="password" id="password1" placeholder="Enter your password" required)
 
                               div.btns.flex.justify-end.items-center.gap-3
                                 button.text-xs.btn.btn-secondary.text-white.py-2.prev-2.prev(class="!w-fit !m-0") Previous
@@ -307,11 +307,11 @@ html(lang='en')
                           |               &lt;h6 class="font-semibold text-title"&gt;Basic Info:&lt;/h6&gt;
                           |               &lt;div&gt;
                           |                   &lt;label for="firstName"&gt;First Name&lt;/label&gt;
-                          |                   &lt;input type="text" id="firstName" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                          |                   &lt;input type="text" id="firstName" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
                           |               &lt;/div&gt;
                           |               &lt;div&gt;
                           |                   &lt;label for="lastName"&gt;Last Name&lt;/label&gt;
-                          |                   &lt;input type="text" id="lastName" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                          |                   &lt;input type="text" id="lastName" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
                           |               &lt;/div&gt;
                           |               &lt;div class="flex items-center justify-end"&gt;
                           |                   &lt;button class="text-xs btn btn-primary text-white py-2 firstNext next !w-fit !m-0"&gt;Next&lt;/button&gt;
@@ -321,11 +321,11 @@ html(lang='en')
                           |               &lt;h6 class="font-semibold text-title"&gt;Basic Info:&lt;/h6&gt;
                           |               &lt;div&gt;
                           |                   &lt;label for="email"&gt;Email&lt;/label&gt;
-                          |                   &lt;input type="email" id="email" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                          |                   &lt;input type="email" id="email" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
                           |               &lt;/div&gt;
                           |               &lt;div&gt;
                           |                   &lt;label for="contact"&gt;Contact&lt;/label&gt;
-                          |                   &lt;input type="number" id="contact" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                          |                   &lt;input type="number" id="contact" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
                           |               &lt;/div&gt;
                           |               &lt;div class="flex items-center justify-end"&gt;
                           |                   &lt;button class="text-xs btn btn-primary text-white py-2 prev-1 prev !w-fit !m-0"&gt;Previous&lt;/button&gt;
@@ -336,17 +336,18 @@ html(lang='en')
                           |               &lt;h6 class="font-semibold text-title"&gt;Basic Info:&lt;/h6&gt;
                           |               &lt;div&gt;
                           |                   &lt;label for="name"&gt;Username&lt;/label&gt;
-                          |                   &lt;input type="text" id="name" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                          |                   &lt;input type="text" id="name" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
                           |               &lt;/div&gt;
                           |               &lt;div&gt;
                           |                   &lt;label for="password1"&gt;Password&lt;/label&gt;
-                          |                   &lt;input type="password" id="password1" placeholder="Enter your first name.." required&gt;First Name&lt;/input&gt;
+                          |                   &lt;input type="password" id="password1" placeholder="Enter your first name" required&gt;First Name&lt;/input&gt;
                           |               &lt;/div&gt;
                           |               &lt;div class="flex items-center justify-end"&gt;
                           |                   &lt;button class="text-xs btn btn-primary text-white py-2 prev-2 prev !w-fit !m-0"&gt;Previous&lt;/button&gt;
                           |                   &lt;button class="text-xs btn btn-primary text-white py-2 submit !w-fit !m-0"&gt;Submit&lt;/button&gt;
                           |               &lt;/div&gt;
-                          |           &lt;/div&gt;                                                    |       &lt;/form&gt;
+                          |           &lt;/div&gt;                                                    |       
+                          |       &lt;/form&gt;
                           |    &lt;/div&gt;
                           |&lt;/div&gt;
 
