--- a/assets/pug/pages/template/register.pug
+++ b/assets/pug/pages/template/register.pug
@@ -14,26 +14,26 @@ html(lang='en')
     body(dir="ltr" class="unique-skin")
         main.page-wrapper
             // Page Body Start
-            div.page-body(class="h-[100vh]")
+            div.page-body(class="h-[100vh] !mt-0")
                 div(class="!flex items-center justify-center h-full p-[15px] common-animate-main").ratio_asos
                     img(class="bg-img" src="../../assets/images/dotsbg.jpg")
                     div(class=" grid grid-cols-12 gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center lg:grid items-center")
-                        div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[470px] min-w-[300px] max-h-max")
+                        div(class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[470px] min-w-[300px] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max")
                             form.theme-form.flex.flex-col.gap-3(class="!m-0 p-8 2sm:p-4" action="index.html")
-                                h3 Create an account
+                                h3 Create an Account
                                 p Enter your detail for registration
                                 div
-                                    input(type="text" placeholder="Enter your name.." required)
+                                    input(type="text" placeholder="Enter your name" required)
                                 div
-                                    input(type="email" placeholder="Enter your id.." required)
+                                    input(type="email" placeholder="Enter your id" required)
                                 div
-                                    input(type="password" placeholder="Password.." required)
+                                    input(type="password" placeholder="Password" required)
                                 div.flex.items-center.gap-2
                                     label.checkbox(class="w-[1rem] h-[1rem]")   
                                         input(type='checkbox' class="peer") 
                                         div.checkbox-indicator(class="peer-checked:!bg-primary !border-primary")  
                                             i(data-feather="check")
-                                    span Accept terms & condition
+                                    span(class="!text-title") Accept terms & condition
                                 button.btn.btn-primary.text-white(class="hover:drop-shadow-lg") Sign Up
                                 div.text-center
                                     span Already have an account?   
