--- a/assets/pug/pages/template/select.pug
+++ b/assets/pug/pages/template/select.pug
@@ -54,7 +54,7 @@ html(lang='en')
                 div.card-body                                   
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
-                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="my-2")  
+                      div.flex.items-center.flex-col.flex-wrap.gap-2
                         div.custom-select.select-style-1
                           select
                             option(disabled='' selected='') Pick your favorite Simpson
@@ -95,7 +95,7 @@ html(lang='en')
                 div.card-body                                   
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
-                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="my-2 dark:bg-sidebar-dark2")
+                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="dark:bg-sidebar-dark2")
                         div.custom-select.select-style-1.select-bg-white
                           select
                             option(disabled='' selected='') Pick your favorite Simpson
@@ -136,7 +136,7 @@ html(lang='en')
                 div.card-body                                   
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
-                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="my-2")
+                      div.flex.items-center.flex-col.flex-wrap.gap-2
                         div.custom-select.select-style-1.border.border-primary.w-full.max-w-xs.select-bg-white(class="dark:bg-dark-dense")
                           select
                             option(selected value="") Last 7 Days 
@@ -173,7 +173,7 @@ html(lang='en')
                 div.card-body                                   
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
-                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="my-2")
+                      div.flex.items-center.flex-col.flex-wrap.gap-2
                         div.custom-select.select-style-1.border.border-secondary.w-full.max-w-xs.select-bg-white(class="dark:bg-dark-dense")
                           select
                             option(selected value="") Last 7 Days 
@@ -196,7 +196,7 @@ html(lang='en')
 
             div.col-span-4(class="lg:col-span-12")
               div.card.tabs
-                div.card-header.pb-2.header-bottom-border6 md:col-span-
+                div.card-header.pb-2.header-bottom-border6
                   div.flex.flex-col
                     h3.text-lg.font-bold Info Select
                     p To set the custom select use 
@@ -210,7 +210,7 @@ html(lang='en')
                 div.card-body                                   
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
-                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="my-2")
+                      div.flex.items-center.flex-col.flex-wrap.gap-2
                         div.custom-select.select-style-1.border.border-info.w-full.max-w-xs.select-bg-white(class="dark:bg-dark-dense")
                           select
                             option(selected value="") Last 7 Days 
@@ -245,7 +245,7 @@ html(lang='en')
                 div.card-body                                   
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
-                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="my-2")
+                      div.flex.items-center.flex-col.flex-wrap.gap-2
                         div.custom-select.select-style-1.border.border-success.w-full.max-w-xs.select-bg-white(class="dark:bg-dark-dense")
                           select.select-xl
                             option(disabled='' selected='')  Extra Large
@@ -301,7 +301,7 @@ html(lang='en')
                 div.card-body                                   
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
-                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="my-2")
+                      div.flex.items-center.flex-col.flex-wrap.gap-2
                         div.form-control.w-full.max-w-xs
                           label.label.flex.justify-between.px-1.py-2
                             span.label-text Pick the best fantasy franchise
