--- a/assets/pug/pages/template/shop.pug
+++ b/assets/pug/pages/template/shop.pug
@@ -53,7 +53,7 @@ html(lang='en')
                               +SVG_ICON("Search","xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
                               i(data-feather="x" class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
 
-                  div.col-span-12.flex.items-center.justify-between.gap-3.bg-white.p-3.rounded-5(class="2sm:flex-col") 
+                  div.col-span-12.flex.items-center.justify-between.gap-3.bg-white.p-3.rounded-5(class="2sm:flex-col 2sm:items-end") 
                      div.flex.items-center.gap-3
                         label(for="sortby" class="text-xs min-w-max text-content3") Sort By                                    
                         select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="sortby" aria-label='Default select example')
@@ -70,7 +70,7 @@ html(lang='en')
                         div.product-setting 
                            a(href="javscript:void(0)" class="list-layout-view")
                               i(data-feather="list" class="w-6 h-6 stroke-content3")
-                  div.col-span-3(class="shop-sidebar")
+                  div.col-span-3(class="2xl:col-span-4 shop-sidebar")
                      div.card.sticky.top-0(class="product-filter")
                         div.card-header 
                            div.flex.items-center.justify-between(class="w-full") 
@@ -85,41 +85,41 @@ html(lang='en')
                                     div.accordionItemContent
                                        ul.flex.gap-2.flex-col
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4") 
-                                                input(type='checkbox' class="peer" id="zara") 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4") 
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="zara").text-content Zara (21)
+                                             p.text-content Zara (21)
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4") 
-                                                input(type='checkbox' class="peer" id="nike")
+                                             label.checkbox.cursor-pointer(class="w-4 h-4") 
+                                                input(type='checkbox' class="peer")
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="nike").text-content Nike (31)
+                                             p.text-content Nike (31)
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")   
-                                             div.checkbox(class="w-4 h-4") 
-                                                input(type='checkbox' class="peer" id="louis-vuitton" checked) 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4") 
+                                                input(type='checkbox' class="peer" checked) 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="louis-vuitton").text-content Louis Vuitton (15)
+                                             p.text-content Louis Vuitton (15)
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4")
-                                                input(type='checkbox' class="peer" id="puma") 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4")
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="puma").text-content Puma (21)
+                                             p.text-content Puma (21)
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4")
-                                                input(type='checkbox' class="peer" id="dior" checked) 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4")
+                                                input(type='checkbox' class="peer" checked) 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="dior").text-content Dior (25)
+                                             p.text-content Dior (25)
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4")
-                                                input(type='checkbox' class="peer" id="H&m") 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4")
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="H&m").text-content H & M (5)
+                                             p.text-content H & M (5)
 
                            div.flex.flex-col.flex-wrap.gap-2
                               div.accordionWrapper
@@ -156,41 +156,41 @@ html(lang='en')
                                     div.accordionItemContent
                                        ul.flex.gap-2.flex-col
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4") 
-                                                input(type='checkbox' class="peer" id="50%off") 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4") 
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="50%off").text-content 50% or more
+                                             p.text-content 50% or more
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4") 
-                                                input(type='checkbox' class="peer" id="40%off" checked)
+                                             label.checkbox.cursor-pointer(class="w-4 h-4") 
+                                                input(type='checkbox' class="peer" checked)
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="40%off").text-content 40% or more
+                                             p.text-content 40% or more
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")   
-                                             div.checkbox(class="w-4 h-4") 
-                                                input(type='checkbox' class="peer" id="30%off") 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4") 
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="30%off").text-content 30% or more
+                                             p.text-content 30% or more
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4")
-                                                input(type='checkbox' class="peer" id="20%off") 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4")
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="20%off").text-content 20% or more
+                                             p.text-content 20% or more
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4")
-                                                input(type='checkbox' class="peer" id="10%off") 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4")
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="10%off").text-content 10% or more
+                                             p.text-content 10% or more
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4")
-                                                input(type='checkbox' class="peer" id="less10%") 
+                                             label.checkbox.cursor-pointer(class="w-4 h-4")
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
-                                             label(for="less10%").text-content Less than 10%
+                                             p.text-content Less than 10%
 
                            div.flex.flex-col.flex-wrap.gap-2
                               div.accordionWrapper
@@ -199,8 +199,8 @@ html(lang='en')
                                     div.accordionItemContent
                                        ul.flex.gap-2.flex-col
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4") 
-                                                input(type='checkbox' class="peer" id="4above" checked)
+                                             label.checkbox(class="w-4 h-4") 
+                                                input(type='checkbox' class="peer" checked)
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
                                              div.flex.items-center.gap-1
@@ -209,10 +209,10 @@ html(lang='en')
                                                 i(data-feather="star" class="w-5 h-5 fill-warning")
                                                 i(data-feather="star" class="w-5 h-5 fill-warning")
                                                 i(data-feather="star" class="w-5 h-5 fill-content")
-                                             label(for="4above").text-content 4 & Above
+                                             p.text-content 4 & Above
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")   
-                                             div.checkbox(class="w-4 h-4") 
-                                                input(type='checkbox' class="peer" id="3above") 
+                                             label.checkbox(class="w-4 h-4") 
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
                                              div.flex.items-center.gap-1
@@ -221,10 +221,10 @@ html(lang='en')
                                                 i(data-feather="star" class="w-5 h-5 fill-warning")
                                                 i(data-feather="star" class="w-5 h-5 fill-content")
                                                 i(data-feather="star" class="w-5 h-5 fill-content")
-                                             label(for="3above").text-content 3 & Above
+                                             p.text-content 3 & Above
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4")
-                                                input(type='checkbox' class="peer" id="2above") 
+                                             label.checkbox(class="w-4 h-4")
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
                                              div.flex.items-center.gap-1
@@ -233,10 +233,10 @@ html(lang='en')
                                                 i(data-feather="star" class="w-5 h-5 fill-content")
                                                 i(data-feather="star" class="w-5 h-5 fill-content")
                                                 i(data-feather="star" class="w-5 h-5 fill-content")
-                                             label(for="2above").text-content 2 & Above
+                                             p.text-content 2 & Above
                                           li.flex.items-center.gap-2(a href="javascript:void(0)")
-                                             div.checkbox(class="w-4 h-4")
-                                                input(type='checkbox' class="peer" id="1star") 
+                                             label.checkbox(class="w-4 h-4")
+                                                input(type='checkbox' class="peer") 
                                                 div.checkbox-indicator(class="peer-checked:!bg-primary !border peer-checked:!border-primary") 
                                                    i(data-feather="check")
                                              div.flex.items-center.gap-1
@@ -245,17 +245,17 @@ html(lang='en')
                                                 i(data-feather="star" class="w-5 h-5 fill-content")
                                                 i(data-feather="star" class="w-5 h-5 fill-content")
                                                 i(data-feather="star" class="w-5 h-5 fill-content")
-                                             label(for="1star").text-content 1
+                                             p.text-content 1
 
                            div.flex.flex-col
                               h4.bg-primary.text-white.text-sm.p-3.w-full.cursor-pointer.rounded.font-bold(class="rounded-tr-[0.25rem] rounded-tl-[0.25rem] rounded-br-none rounded-bl-none") New Product
                               div(class="block w-full p-3 border-2 bg-white-light border-primary-light")
                                  +new-product-card(NEW_PRODUCT)
 
-                  div.col-span-9(class="xl:col-span-12 product-wrapper-grid")
+                  div.col-span-9(class="2xl:col-span-8 xl:col-span-12 product-wrapper-grid")
                      .grid.grid-cols-12.gap-6(class="sm:mt-5") 
                         each data in PRODUCT_BOX
-                           div.col-span-3(class='4xl:col-span-4 md:col-span-6 sm:col-span-12 product-box')
+                           div.col-span-3(class='4xl:col-span-4 2xl:col-span-6 xl:col-span-4 md:col-span-6 sm:col-span-12 product-box')
                               +product(data,"modal", "productmodal")
 
             // Page Body End  
