--- a/html/template/forgot-password.html
+++ b/html/template/forgot-password.html
@@ -23,20 +23,20 @@
   <body class="unique-skin" dir="ltr">
     <main class="page-wrapper">
       <!-- Page Body Start-->
-      <div class="page-body h-[100vh]">
+      <div class="page-body h-[100vh] !mt-0">
         <div class="!flex items-center justify-center h-full p-[.9375rem] common-animate-main ratio_asos"><img class="bg-img" src="../../assets/images/dotsbg.jpg">
           <div class=" grid grid-cols-12 gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center items-center">
-            <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] h-max">
+            <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] h-max">
               <form class="theme-form flex flex-col gap-3 !m-0 p-8 2sm:p-4" action="otp.html">
                 <h3>Forgot password</h3>
                 <p>Add email address to receive a verification code</p>
                 <div>
                   <input type="email" placeholder="Enter your id.." required>
                 </div>
-                <button class="btn btn-primary text-white hover:drop-shadow-lg">Send Me</button>
+                <button class="btn btn-primary text-white hover:drop-shadow-lg !mb-0">Send Me</button>
               </form>
             </div>
-            <div class="col-span-7 rounded-lg xl:hidden">
+            <div class="col-span-7 rounded-lg 2xl:col-span-6 xl:hidden">
               <div class="relative flex items-center justify-center object-contain"><img class="w-[50%]" src="../../assets/images/svg/Floor.svg" alt=""><img class="common-animate top-0 absolute left-[60%]  animate__animated animate__infinite animate__shakeY animate__slower" src="../../assets/images/svg/surface.svg" alt=""></div>
             </div>
           </div>
