--- a/html/template/otp.html
+++ b/html/template/otp.html
@@ -25,13 +25,13 @@
   <body class="unique-skin" dir="ltr">
     <main class="page-wrapper">
       <!-- Page Body Start-->
-      <div class="page-body h-[100vh]">
-        <div class="!flex items-center justify-center h-full p-[.9375rem] common-animate-main ratio_asos"><img class="bg-img" src="../../assets/images/dotsbg.jpg">
+      <div class="page-body h-[100vh] !mt-0">
+        <div class="!flex items-center justify-center h-full common-animate-main p-2 ratio_asos"><img class="bg-img" src="../../assets/images/dotsbg.jpg">
           <div class=" grid grid-cols-12 gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center items-center">
-            <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] max-h-max">
+            <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max">
               <form class="theme-form flex flex-col gap-3 !m-0 p-8 2sm:p-4" action="reset-password.html">
-                <h3>Verification code</h3>
-                <p class="!mb-0">We have sent the code verification to your email address</p><span class="justify-center mt-0 edit flex items-center gap-2 text-xs !text-primary mt-[15px]">User2211@gmail.com <a href="forgot-password.html"> <i class="w-5 h-5 stroke-primary" data-feather="edit-3"></i></a></span>
+                <h3>Verification Code</h3>
+                <p class="!mb-0">We have sent the code verification to your email address</p><span class="justify-center mt-0 edit flex items-center gap-2 text-xs !text-primary mt-[15px]">emayiladosidorshina@gmail.com <a href="forgot-password.html"> <i class="w-5 h-5 stroke-primary" data-feather="edit-3"></i></a></span>
                 <div class="flex items-center gap-2 mt-6">
                   <input class="w-full text-center input-otp " placeholder="0" type="tel" required oninput="digitValidate(this)" onkeyup="tabChange(1)" maxlength="1">
                   <input class="w-full text-center input-otp " placeholder="0" type="tel" required oninput="digitValidate(this)" onkeyup="tabChange(2)" maxlength="1">
