--- a/html/template/register.html
+++ b/html/template/register.html
@@ -25,27 +25,27 @@
   <body class="unique-skin" dir="ltr">
     <main class="page-wrapper">
       <!-- Page Body Start-->
-      <div class="page-body h-[100vh]">
+      <div class="page-body h-[100vh] !mt-0">
         <div class="!flex items-center justify-center h-full p-[15px] common-animate-main ratio_asos"><img class="bg-img" src="../../assets/images/dotsbg.jpg">
           <div class=" grid grid-cols-12 gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center lg:grid items-center">
-            <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[470px] min-w-[300px] max-h-max">
+            <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[470px] min-w-[300px] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max">
               <form class="theme-form flex flex-col gap-3 !m-0 p-8 2sm:p-4" action="index.html">
-                <h3>Create an account</h3>
+                <h3>Create an Account</h3>
                 <p>Enter your detail for registration</p>
                 <div>
-                  <input type="text" placeholder="Enter your name.." required>
+                  <input type="text" placeholder="Enter your name" required>
                 </div>
                 <div>
-                  <input type="email" placeholder="Enter your id.." required>
+                  <input type="email" placeholder="Enter your id" required>
                 </div>
                 <div>
-                  <input type="password" placeholder="Password.." required>
+                  <input type="password" placeholder="Password" required>
                 </div>
                 <div class="flex items-center gap-2">
                   <label class="checkbox w-[1rem] h-[1rem]">  
                     <input class="peer" type="checkbox">
                     <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
-                  </label><span>Accept terms & condition</span>
+                  </label><span class="!text-title">Accept terms & condition</span>
                 </div>
                 <button class="btn btn-primary text-white hover:drop-shadow-lg">Sign Up</button>
                 <div class="text-center"><span>Already have an account?   <a href="login.html">Sign in</a></span></div>
