--- a/html/template/reset-password.html
+++ b/html/template/reset-password.html
@@ -25,18 +25,18 @@
   <body class="unique-skin" dir="ltr">
     <main class="page-wrapper">
       <!-- Page Body Start-->
-      <div class="page-body h-[100vh]">
+      <div class="page-body h-[100vh] !mt-0">
         <div class="!flex items-center justify-center h-full p-[.9375rem] common-animate-main ratio_asos"><img class="bg-img" src="../../assets/images/dotsbg.jpg">
           <div class=" grid grid-cols-12 gap-0 mx-auto w-full max-w-[70%] xl:max-w-[50%] md:max-w-[70%] sm:max-w-[80%] 2sm:max-w-[100%] xl:flex xl:justify-center items-center">
-            <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] max-h-max">
+            <div class="relative col-span-5 bg-white 2xl:col-span-6 z-1 xl:col-span-12 rounded-xl max-w-[29.375rem] min-w-[18.75rem] sm:min-w-[22.75rem] 2sm:min-w-[18.75rem] max-h-max">
               <form class="theme-form flex flex-col gap-3 !m-0 p-8 2sm:p-4" action="login.html">
-                <h3>Reset password</h3>
+                <h3>Reset Password</h3>
                 <p>See your growth and get consulting support!</p>
                 <div>
-                  <input type="text" placeholder="New password.." required>
+                  <input type="text" placeholder="New password" required>
                 </div>
                 <div>
-                  <input type="text" placeholder="Confirm password.." required>
+                  <input type="text" placeholder="Confirm password" required>
                 </div>
                 <button class="btn btn-primary text-white hover:drop-shadow-lg">Reset</button>
                 <div>
