--- a/html/template/select.html
+++ b/html/template/select.html
@@ -1019,7 +1019,7 @@
                 <div class="card-body">                                  
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex items-center flex-col flex-wrap gap-2 my-2"> 
+                      <div class="flex items-center flex-col flex-wrap gap-2">
                         <div class="custom-select select-style-1">
                           <select>
                             <option disabled="" selected="">Pick your favorite Simpson</option>
@@ -1064,7 +1064,7 @@
                 <div class="card-body">                                  
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex items-center flex-col flex-wrap gap-2 my-2 dark:bg-sidebar-dark2">
+                      <div class="flex items-center flex-col flex-wrap gap-2 dark:bg-sidebar-dark2">
                         <div class="custom-select select-style-1 select-bg-white">
                           <select>
                             <option disabled="" selected="">Pick your favorite Simpson</option>
@@ -1109,7 +1109,7 @@
                 <div class="card-body">                                  
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex items-center flex-col flex-wrap gap-2 my-2">
+                      <div class="flex items-center flex-col flex-wrap gap-2">
                         <div class="custom-select select-style-1 border border-primary w-full max-w-xs select-bg-white dark:bg-dark-dense">
                           <select>
                             <option selected value="">Last 7 Days </option>
@@ -1150,7 +1150,7 @@
                 <div class="card-body">                                  
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex items-center flex-col flex-wrap gap-2 my-2">
+                      <div class="flex items-center flex-col flex-wrap gap-2">
                         <div class="custom-select select-style-1 border border-secondary w-full max-w-xs select-bg-white dark:bg-dark-dense">
                           <select>
                             <option selected value="">Last 7 Days </option>
@@ -1178,7 +1178,7 @@
             </div>
             <div class="col-span-4 lg:col-span-12">
               <div class="card tabs">
-                <div class="card-header pb-2 header-bottom-border6">md:col-span-
+                <div class="card-header pb-2 header-bottom-border6">
                   <div class="flex flex-col">
                     <h3 class="text-lg font-bold">Info Select</h3>
                     <p>To set the custom select use <strong>.custom-select   </strong>& <strong>.select-style-1  </strong>class.</p>
@@ -1191,7 +1191,7 @@
                 <div class="card-body">                                  
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex items-center flex-col flex-wrap gap-2 my-2">
+                      <div class="flex items-center flex-col flex-wrap gap-2">
                         <div class="custom-select select-style-1 border border-info w-full max-w-xs select-bg-white dark:bg-dark-dense">
                           <select>
                             <option selected value="">Last 7 Days </option>
@@ -1232,7 +1232,7 @@
                 <div class="card-body">                                  
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex items-center flex-col flex-wrap gap-2 my-2">
+                      <div class="flex items-center flex-col flex-wrap gap-2">
                         <div class="custom-select select-style-1 border border-success w-full max-w-xs select-bg-white dark:bg-dark-dense">
                           <select class="select-xl">
                             <option disabled="" selected=""> Extra Large</option>
@@ -1297,7 +1297,7 @@
                 <div class="card-body">                                  
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex items-center flex-col flex-wrap gap-2 my-2">
+                      <div class="flex items-center flex-col flex-wrap gap-2">
                         <div class="form-control w-full max-w-xs">
                           <label class="label flex justify-between px-1 py-2"><span class="label-text">Pick the best fantasy franchise</span><span class="label-text-alt">Alt label</span></label>
                           <div class="custom-select select-style-1 border border-warning w-full max-w-xs select-bg-white dark:bg-dark-dense">
